fixes issue where a single need to observe 2 object at same time causing one of them to be unobserved, added margin on mobile view.

--- a/css/explore.css
+++ b/css/explore.css
@@ -6,6 +6,7 @@
     left: 50vw;
     top:0;
     position: relative;
+    margin-top: 10%;
  }
 
  body .right-row{
